--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   image_picker: ^0.6.7+1
   path: ^1.6.4
   path_provider: ^1.6.10
+  sqflite: ^1.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
