--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   path: ^1.6.4
   path_provider: ^1.6.10
   sqflite: ^1.3.0
+  location: ^3.0.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
