--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,8 @@ dependencies:
   path_provider: ^1.6.10
   sqflite: ^1.3.0
   location: ^3.0.2
-
-
+  google_maps_flutter: ^0.5.28+1
+  http: ^0.12.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
