--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data android:name="flutterEmbedding" android:value="2" />
         <!-- Custom Addition for using Google Maps SDK and Location Services -->
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyC1naAnyfkjhfmph7dELalllQGQszjZaRM" />
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="ENTER API KEY" />
 
     </application>
 </manifest>
